--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "json-server": "^0.17.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-hook-form": "^7.42.1",
         "react-redux": "^8.0.5"
     },
     "devDependencies": {
