--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@reduxjs/toolkit": "^1.9.1",
         "concurrently": "^7.6.0",
         "json-server": "^0.17.1",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.42.1",
