--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "react-redux-blog",
     "private": true,
-    "version": "0.0.0",
+    "version": "0.7.3",
     "type": "module",
     "scripts": {
         "dev": "concurrently \"vite\" \"json-server --watch db.json\"",
@@ -11,6 +11,7 @@
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.1",
         "concurrently": "^7.6.0",
+        "framer-motion": "^9.0.2",
         "json-server": "^0.17.1",
         "prop-types": "^15.8.1",
         "react": "^18.2.0",
