--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "dev": "concurrently \"vite\" \"json-server --watch db.json\"",
         "build": "vite build",
-        "preview": "vite preview"
+        "preview": "vite preview",
+        "test": "vitest"
     },
     "dependencies": {
         "@reduxjs/toolkit": "^1.9.1",
@@ -20,10 +21,14 @@
         "react-redux": "^8.0.5"
     },
     "devDependencies": {
+        "@testing-library/jest-dom": "^5.16.5",
+        "@testing-library/react": "^14.0.0",
         "@types/react": "^18.0.26",
         "@types/react-dom": "^18.0.9",
         "@vitejs/plugin-react": "^3.0.0",
+        "jsdom": "^21.1.1",
         "sass": "^1.57.1",
-        "vite": "^4.0.0"
+        "vite": "^4.0.0",
+        "vitest": "^0.29.2"
     }
 }
