--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "finance-manager",
     "private": true,
-    "version": "0.9.1",
+    "version": "0.9.2",
     "type": "module",
     "scripts": {
         "dev": "concurrently \"vite\" \"json-server --watch db.json\"",
@@ -18,7 +18,9 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-hook-form": "^7.42.1",
-        "react-redux": "^8.0.5"
+        "react-redux": "^8.0.5",
+        "react-responsive": "^9.0.2",
+        "react-router-dom": "^6.11.0"
     },
     "devDependencies": {
         "@testing-library/jest-dom": "^5.16.5",
